c/examples/writing-a-c-compiler-tests/tests/chapter_9/valid/arguments_in_registers/parameter_shadows_own_function.c
int a(int a) {
    return a * 2;
}

int main(void) {
    return a(1);
}